<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingHorizontal="24dp"
	android:paddingTop="88dp"
	android:background="@drawable/bg_taste_landing"
	tools:context=".ui.taste.TasteLandingFragment">

	<TextView
		android:id="@+id/tv_landing_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/taste_landing_title"
		android:textSize="24sp"
		android:fontFamily="@font/pretendard_semibold"
		app:layout_constraintTop_toTopOf="parent">
	</TextView>
	<TextView
		android:id="@+id/tv_landing_contents"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/taste_landing_contents"
		android:textSize="16sp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/tv_landing_title">
	</TextView>
	<ImageView
		android:id="@+id/iv_landing_image"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/img_default_user"
		android:adjustViewBounds="true"
		android:scaleType="fitStart"
		app:layout_constraintTop_toBottomOf="@+id/tv_landing_contents"
		app:layout_constraintBottom_toTopOf="@+id/btn_start">
	</ImageView>
	<Button
		android:id="@+id/btn_start"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_marginHorizontal="16dp"
		android:layout_marginBottom="32dp"
		android:text="@string/onboarding_start"
		android:textColor="@color/white"
		android:textSize="18dp"
		android:fontFamily="@font/pretendard_bold"
		android:background="@drawable/bg_common_button"
		app:layout_constraintBottom_toBottomOf="parent">
	</Button>

</androidx.constraintlayout.widget.ConstraintLayout>