<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.community.WriteActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/cl_top"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:background="@color/white"
		app:layout_constraintTop_toTopOf="parent">
		<TextView
			android:id="@+id/toolbar_title"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/community_write"
			android:textStyle="bold"
			android:textSize="18sp"
			android:gravity="center"
			>
		</TextView>
		<ImageView
			android:id="@+id/btn_back"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/vi_back"
			android:layout_marginStart="8dp"
			android:padding="8dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent">
		</ImageView>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/cl_top"
		app:layout_constraintBottom_toBottomOf="parent">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:paddingBottom="32dp">
			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cl_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toTopOf="parent">
				<TextView
					android:id="@+id/tv_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/community_write_title_text"
					android:textSize="16sp"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent">
				</TextView>
				<EditText
					android:id="@+id/edit_title"
					android:layout_width="match_parent"
					android:layout_height="56dp"
					android:layout_marginTop="12dp"
					android:background="@drawable/bg_vote"
					android:hint="@string/community_write_title_hint"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:textSize="16sp"
					app:layout_constraintTop_toBottomOf="@+id/tv_title">
				</EditText>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cl_category"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toBottomOf="@+id/cl_title"
				>
				<TextView
					android:id="@+id/tv_category"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/community_write_category_text"
					android:textSize="16sp"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent">
				</TextView>


				<androidx.appcompat.widget.AppCompatSpinner
					android:id="@+id/spinner_category"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="12dp"
					android:popupElevation="8dp"
					android:spinnerMode="dropdown"
					android:overlapAnchor="false"
					app:layout_constraintTop_toBottomOf="@+id/tv_category">
				</androidx.appcompat.widget.AppCompatSpinner>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cl_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toBottomOf="@+id/cl_category"
				>
				<TextView
					android:id="@+id/tv_content"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/community_write_content_text"
					android:textSize="16sp"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent">
				</TextView>
				<EditText
					android:id="@+id/edit_content"
					android:layout_width="match_parent"
					android:layout_height="180dp"
					android:layout_marginTop="12dp"
					android:background="@drawable/bg_vote"
					android:hint="@string/community_write_content_hint"
					android:padding = "16dp"
					android:textSize="16sp"
					android:inputType="text"
					android:gravity="top"
					app:layout_constraintTop_toBottomOf="@+id/tv_content">
				</EditText>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cl_photo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toBottomOf="@+id/cl_content"
				>
				<TextView
					android:id="@+id/tv_photo"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/community_write_image_text"
					android:textSize="16sp"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent">
				</TextView>
				<androidx.core.widget.NestedScrollView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="12dp"
					android:orientation="horizontal"
					app:layout_constraintTop_toBottomOf="@+id/tv_photo">
					<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent">
						<androidx.recyclerview.widget.RecyclerView
							android:id="@+id/rv_photo"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toTopOf="parent"
							app:layout_constraintBottom_toBottomOf="parent">
						</androidx.recyclerview.widget.RecyclerView>

						<LinearLayout
							android:layout_width="74dp"
							android:layout_height="74dp"
							android:padding="1dp"
							android:gravity="center"
							android:layout_marginStart="8dp"
							android:clipToPadding="false"
							app:layout_constraintTop_toTopOf="parent"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintStart_toEndOf="@id/rv_photo">
							<androidx.cardview.widget.CardView
								android:id="@+id/cv_photo"
								android:layout_width="match_parent"
								android:layout_height="match_parent"
								android:background="@drawable/bg_vote"
								app:cardCornerRadius="8dp">
								<ImageView
									android:id="@+id/iv_photo"
									android:layout_width="match_parent"
									android:layout_height="match_parent"
									android:src="@drawable/vi_plus"
									android:scaleType="centerCrop">
								</ImageView>
							</androidx.cardview.widget.CardView>
						</LinearLayout>
					</androidx.constraintlayout.widget.ConstraintLayout>
				</androidx.core.widget.NestedScrollView>

			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cl_vote"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toBottomOf="@+id/cl_photo">
				<TextView
					android:id="@+id/tv_vote"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp"
					android:textStyle="bold"
					android:text="@string/community_write_vote_text"
					app:layout_constraintTop_toTopOf="parent"
					>
				</TextView>
				<EditText
					android:id="@+id/et_post_vote1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingHorizontal="16dp"
					android:paddingVertical="12dp"
					android:layout_marginTop="12dp"
					android:hint="@string/community_write_vote_hint"
					android:background="@drawable/bg_vote"
					app:layout_constraintTop_toBottomOf="@+id/tv_vote">
				</EditText>

				<EditText
					android:id="@+id/et_post_vote2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingHorizontal="16dp"
					android:paddingVertical="12dp"
					android:layout_marginTop="8dp"
					android:hint="@string/community_write_vote_hint"
					android:background="@drawable/bg_vote"
					app:layout_constraintTop_toBottomOf="@+id/et_post_vote1">
				</EditText>


			</androidx.constraintlayout.widget.ConstraintLayout>

			<Button
				android:id="@+id/btn_complete"
				android:layout_width="match_parent"
				android:layout_height="56dp"
				android:hint="@string/community_write_button"
				android:background="@drawable/bg_common_button"
				android:textColorHint="@color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				android:layout_marginTop="32dp"
				android:backgroundTint="@null"
				app:layout_constraintTop_toBottomOf="@+id/cl_vote"
				app:layout_constraintBottom_toBottomOf="parent"
				>
			</Button>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>