<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:paddingHorizontal="24dp"
	android:paddingTop="56dp"
	tools:context=".ui.taste.TasteSelectFragment">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/tv_landing_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/taste_find_title"
				android:textSize="24sp"
				android:fontFamily="@font/pretendard_semibold"
				app:layout_constraintTop_toTopOf="parent">
			</TextView>
			<TextView
				android:id="@+id/tv_landing_contents"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/taste_find_contents"
				android:textSize="16sp"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toBottomOf="@id/tv_landing_title">
			</TextView>
			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cl_question1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				app:layout_constraintTop_toBottomOf="@id/tv_landing_contents">
				<TextView
					android:id="@+id/tv_question1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="1. 무엇을 찾고 계신가요?"
					android:textSize="16sp"
					android:fontFamily="@font/pretendard_semibold"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent">
				</TextView>
				<RadioGroup
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					app:layout_constraintTop_toBottomOf="@id/tv_question1"
					>
					<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
						<RadioButton
							android:id="@+id/rb_question1_first"
							android:layout_width="0dp"
							android:layout_height="100dp"
							android:text="@string/taste_question1_first"
							android:textSize="16sp"
							android:background="@drawable/rb_taste_selector"
							android:button="@android:color/transparent"
							android:gravity="center"
							android:layout_marginEnd="36dp"
							android:fontFamily="@font/pretendard_semibold"
							android:textColor="@drawable/rb_taste_text"
							android:checked="true"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintEnd_toStartOf="@id/rb_question1_second"
							app:layout_constraintTop_toTopOf="parent">
						</RadioButton>

						<RadioButton
							android:id="@+id/rb_question1_second"
							android:layout_width="0dp"
							android:layout_height="100dp"
							android:text="@string/taste_question1_second"
							android:textSize="16sp"
							android:background="@drawable/rb_taste_selector"
							android:button="@android:color/transparent"
							android:gravity="center"
							android:fontFamily="@font/pretendard_semibold"
							android:textColor="@drawable/rb_taste_text"
							app:layout_constraintTop_toTopOf="parent"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintStart_toEndOf="@id/rb_question1_first">
						</RadioButton>

					</androidx.constraintlayout.widget.ConstraintLayout>
				</RadioGroup>
			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>