<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_post_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_post_contents_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_contents">
            <TextView
                android:id="@+id/tv_post_contents_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/community_post_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                >
            </TextView>
            <TextView
                android:id="@+id/tv_post_contents_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/community_post_content_short"
                android:textSize="12sp"
                android:textColor="@color/gray1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_post_contents_title">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_contents"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/img_communitiy_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_post_vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/cl_post_contents">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_post_vote1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:background="@drawable/bg_vote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tv_post_vote1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_vote1"
                android:textSize="12sp"
                android:textColor="@color/gray5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <TextView
                android:id="@+id/tv_post_vote_percent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/community_vote_percent1"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_post_vote2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_vote"
            app:layout_constraintTop_toBottomOf="@id/cl_post_vote1">
            <TextView
                android:id="@+id/tv_post_vote2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_vote2"
                android:textSize="12sp"
                android:textColor="@color/gray5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>
            <TextView
                android:id="@+id/tv_post_vote_percent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/community_vote_percent2"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_post_vote">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_post_info_user"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/img_default_user"
            app:civ_border_overlay="true"
            app:civ_border_color="@color/main_circle"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/main_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/tv_post_info_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray1"
            android:text="@string/community_user_name"
            app:layout_constraintStart_toEndOf="@id/iv_post_info_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>
        <ImageView
            android:id="@+id/iv_post_badge"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/vi_badge"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_post_info_user_name"
            >
        </ImageView>
        <TextView
            android:id="@+id/tv_post_info_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray1"
            android:text="@string/community_post_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray2"
        app:layout_constraintTop_toBottomOf="@+id/cl_post_info"
        >
    </View>

</androidx.constraintlayout.widget.ConstraintLayout>