<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_popup"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_communitiy_test"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/tv_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_pop_up_title"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:fontFamily="@font/campton_bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_popup">
    </TextView>

    <TextView
        android:id="@+id/tv_popup_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_pop_up_content"
        android:textSize="14sp"
        android:textColor="@color/gray_text"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_popup_title">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fl_popup_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:background="@drawable/bg_category_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_popup_content">
        <TextView
            android:id="@+id/tv_popup_tag_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        </TextView>
        <TextView
            android:id="@+id/tv_popup_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_pop_up_tag"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toEndOf="@+id/tv_popup_tag_hash"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_popup_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_pop_up_date"
        android:textSize="13sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_popup_tag">
    </TextView>

    <TextView
        android:id="@+id/tv_popup_div_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ~ "
        android:textSize="13dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/tv_popup_start_date"
        app:layout_constraintTop_toBottomOf="@+id/fl_popup_tag">
    </TextView>

    <TextView
        android:id="@+id/tv_popup_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_pop_up_date"
        android:textSize="13sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/tv_popup_div_date"
        app:layout_constraintTop_toBottomOf="@+id/fl_popup_tag">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>